docs: tags fix, tidying up
